tests/NormalTests/paczka1/fuzzy1/94490525.err
Error in line 2: GON5st A98 18,3
Error in line 16: A884 A98 54,4
Error in line 19: A884 S176 56,6
Error in line 24: A884 A98 97,7
Error in line 31: A884 A884 36,7
Error in line 14: 0Oq9s9yK7 S176 157,5
Error in line 32: 6cwon9JcAN S183 48,6
Error in line 40: A884 A98 57,00
